# si2_proxy

./: Cargo.toml  README.md
config/: blocked.json  words.json
logs/: log.json
src/: main.rs
src/proxy/: blocker.rs  fetcher.rs  filter.rs  logger.rs  mod.rs  service.rs  utils.rs
templates/: blocked.html  index.html
