[package]
name = "si_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
bytes = "1.11.1"
chrono = "0.4.44"
regex = "1.12.3"
reqwest = { version = "0.12", features = ["gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
url = "2.5.8"
